Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2867118 by drunken monkey: Fixed reported coding standards problems.
- #2839932 by drunken monkey,  borisson_, bmcclure, jacktonkin: Fixed Views
  problems with "Rendered item" fields.
- #2765317 by vasike: Added a "Last" aggregation for aggregated fields.
- #2861657 by drunken monkey: Removed remaining usages of "e.g.".

Search API 1.0, Beta 5 (2017-04-02):
------------------------------------
- #2842029 by vasike, drunken monkey: Added a "plugin helper" service for
  creating index plugins.
- #2863253 by drunken monkey: Added hook infos for all our hooks.
- #2856050 by StryKaizer, drunken monkey, marthinal, borisson_: Added getPath()
  to display plugins and deprecated getUrl().
- #2856003 by borisson_, drunken monkey: Added "index" and "path" to search
  display annotation definition.
- #2842557 by StryKaizer, Boobaa, drunken monkey, borisson_: Fixed "is rendered
  on current page" checks for Views displays with contextual filters.
- #2855157 by dbjpanda: Fixed a small CSS error.
- #2842007 by shashank.mundhra: Fixed DB comment of search_api_item.status
  column.
- #2682369 by Alumei, drunken monkey, swentel, Crell, stBorchert, prics,
  borisson_: Fixed problems with overridden config entities.
- #2645882 by drunken monkey, borisson_: Fixed "items could not be indexed"
  message for "Index now".
- #2641388 by mallezie, drunken monkey, borisson_, janusman: Added various UX
  improvements for the "Fields" tab.
- #2861587 by alexpott: Fixed the DB/Defaults integration tests.
- #2855758 by StryKaizer, drunken monkey: Fixed "is rendered" checks for Views
  block displays.
- #2855444 by drunken monkey: Added language-specific test for the "Rendered
  item" processor.
- #2794295 by isramv, drunken monkey, alan-ps: Fixed default index indexing term
  names instead of IDs.
- #2343161 by alan-ps, drunken monkey: Added per-datasource indexing stats.